<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation_graph"
    app:startDestination="@+id/navigation_trending">

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.example.movieapplication.main.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/fragment_trending" />

    <fragment
        android:id="@+id/navigation_genres"
        android:name="com.example.movieapplication.main.ui.genres.GenresFragment"
        android:label="@string/title_genres"
        tools:layout="@layout/fragment_genres" >
        <action
            android:id="@+id/action_navigation_genres_to_genreListFragment2"
            app:destination="@id/genreListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.movieapplication.main.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" />
    <fragment
        android:id="@+id/movieDetailsFragment"
        android:name="com.example.movieapplication.main.ui.details.MovieDetailsFragment"
        android:label="MovieDetailsFragment" >
        <argument
            android:name="movie"
            app:argType="com.example.movieapplication.main.network.MovieProperty" />
    </fragment>
    <action android:id="@+id/action_global_movieDetailsFragment" app:destination="@id/movieDetailsFragment" />
    <fragment
        android:id="@+id/genreListFragment"
        android:name="com.example.movieapplication.main.ui.genrelist.GenreListFragment"
        android:label="GenreListFragment" >
        <argument
            android:name="genre_id"
            app:argType="long" />
    </fragment>
</navigation>